--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "homepage": "https://2gear.in/react",
   "dependencies": {
-    "@tanstack/react-query": "^5.40.1",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@tanstack/react-query": "^5.45.1",
+    "@tanstack/react-query-devtools": "^5.45.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.18.2",
     "axios": "^1.7.2",
     "axios-retry": "^4.4.0",
     "bootstrap": "^5.3.3",
@@ -16,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-lazyload": "^3.2.1",
     "react-owl-carousel": "^2.3.3",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
