--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "myapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://2gear.in/react",
+  "homepage": "https://2gear.in",
+  "proxy":"https://2gear.in",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.45.1",
