--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-# REACT_APP_API_URL=https://2gear.in/production/api
-# REACT_APP_BASE_URL=/
-# REACT_APP_ENV=production
+REACT_APP_API_URL=https://2gear.in/production/api
+REACT_APP_BASE_URL=/
+REACT_APP_ENV=production
