--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
+    "sweetalert2": "^11.12.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
